<resources>
    <string name="app_name">FTPClient</string>

    <string name="connections_fragment_label">Connections</string>
    <string name="files_fragment_label">Files</string>

    <string name="download_file">Download</string>
    <string name="add_connection">Add connection</string>
    <string name="edit_connection">Edit connection</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="server">Server</string>
    <string name="error_occurred">An error occurred</string>
    <string name="file_properties">Properties</string>
    <string name="filename">Filename</string>
    <string name="size">Size</string>
    <string name="owner">Owner</string>
    <string name="bytes">%d Byte</string>
    <string name="kilobytes">%.3f KiB</string>
    <string name="megabytes">%.3f MiB</string>
    <string name="gigabytes">%.2f GiB</string>
    <string name="terabytes">%.2f TiB</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Do you really want to delete this file?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="error_descriptions">Probably, you just don\'t have an internet connection, the server is currently not reachable or your login credentials are not correct. If you think, this is a problem with the application, you can copy the error details.</string>
    <string name="copy">Copy</string>
    <string name="no_connections">No connections</string>
    <string name="add_file">Add file</string>
    <string name="select_file">Select file</string>
    <string name="delete_connection_confirmation">Do you really want to delete this connection?</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="new_filename">New filename</string>
    <string name="enter_new_filename">Enter new filename</string>
    <string name="group">Group</string>
    <string name="dir_name">Directory name</string>
    <string name="enter_dir_name">Enter directory name</string>
    <string name="delete_dir_confirmation">Do you really want to delete this directory?</string>
    <string name="dir_delete_message">The directory has to be empty. If it\'s not empty, nothing will happen.</string>
    <string name="upload_completed">Upload completed</string>
    <string name="upload_failed">Upload failed</string>
    <string name="download_completed">Download completed</string>
    <string name="download_failed">Download failed</string>
    <string name="directory_is_empty">Directory is empty</string>
    <string name="delete_completed">Deletion completed</string>
    <string name="deletion_failed">Deletion failed</string>
    <string name="renaming_completed">Renaming completed</string>
    <string name="renaming_failed">Renaming failed</string>
    <string name="dir_creation_completed">Directory creation completed</string>
    <string name="dir_creation_failed">Directory creation failed</string>
    <string name="timestamp">Timestamp</string>
    <string name="points_to">Points to</string>
    <string name="port">Port</string>
    <string name="default_port" translatable="false">21</string>
    <string name="go_to">Go to</string>
    <string name="update">Update</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="directory">Directory - leave empty for root directory</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="delete_bookmark_confirmation">Do you really want to delete this bookmark?</string>
    <string name="delete_connection_message">This will delete all bookmarks from this connection.</string>
    <string name="add_directory">Add directory</string>
    <string name="upload_summary">Upload finished: %d succeeded, %d failed</string>
    <string name="connection_type_ftp">FTP</string>
    <string name="connection_type_ftps">FTPS</string>
    <string name="connection_type_sftp">SFTP</string>
    <string name="implicit">Implicit connection</string>
    <string name="utf8">Use UTF-8</string>
    <string name="passive">Use passive mode</string>
    <string name="private_key">Use private key</string>
    <string name="select_key_file">Select key</string>
    <string name="key_error">Couldn\'t parse key</string>
    <string name="ask_password">Ask for password when connecting</string>
    <string name="upload_file">Upload file</string>
    <string name="bad_file">Bad file content</string>
    <string name="preview">Preview</string>
    <string name="uploading">Uploading: %s</string>
    <string name="uploading_multi">Uploading: %%s (file %d/%d)</string>
    <string name="downloading">Downloading: %s</string>
    <string name="not_started">not started yet</string>
    <string name="percent">%d%%</string>
    <string name="file_content">File content</string>
    <string name="save">Save</string>
    <string name="start_directory">Start directory - leave empty for root directory</string>
    <string name="mtm_accept_cert">Accept unknown certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.\n\n%s</string>
    <string name="mtm_cert_expired">The server certificate is expired\n\n%s.</string>
    <string name="mtm_unknown_err">%s\n\n%s</string>
    <string name="mtm_parsing_err">Parsing error: %s</string>
    <string name="mtm_accept_server_name">Accept mismatching server name?</string>
    <string name="mtm_cert_details">Certificate details:\n%s</string>
    <string name="mtm_decision_always">Trust</string>
    <string name="mtm_decision_abort">Abort</string>
    <string name="mtm_cert_details_properties">%s\nValid from %s to %s\nSHA-1: %s\nSHA-256: %s\nSigned by: %s</string>
    <string name="name">Name</string>
    <string name="sorting">Sorting</string>
    <string name="descending">Descending</string>
    <string name="security_menu">Security options</string>
    <string name="del_cert">Delete trusted certificates</string>
    <string name="del_ssh_auth">Delete trusted SSH authenticities</string>
    <string name="host_key_unknown">Can\'t establish authenticity</string>
    <string name="host_key_unknown_msg">The authenticity of host "%1$s" can\'t be established.\n%2$s key fingerprint is %3$s.</string>
    <string name="host_key_changed">WARNING: Host key has changed</string>
    <string name="host_key_changed_msg">The host key of "%1$s" has changed. Someone could be eavesdropping on you right now (man-in-the-middle attack)!\n\nIt is also possible that the host key has just been changed.\nThe fingerprint for the %2$s key sent by the remote host is %3$s.</string>
    <string name="as_server">As server</string>
    <string name="private_data">Use private data connection</string>
    <string name="show_hidden">Show hidden files</string>
    <string name="download_multiple">Download multiple</string>
    <string name="download_summary">Download finished: %d succeeded, %d failed</string>
    <string name="downloading_multi">Downloading: %%s (file %d/%d)</string>
    <string name="saf_integration">Enable SAF integration (Requires restart. Not supported by all servers and can\'t be used with asking password on connection.)</string>
    <string name="download_all">Download all</string>
    <string name="enter_password">Enter password</string>

    <string-array name="security_options" translatable="false">
        <item>@string/del_cert</item>
        <item>@string/del_ssh_auth</item>
    </string-array>
</resources>
