<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/connection_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="12dp"
        android:layout_marginStart="48dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/copy_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:layout_gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:drawablePadding="24dp"
        android:padding="12dp"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_content_copy_24"/>

    <TextView
        android:id="@+id/edit_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:drawablePadding="24dp"
        android:padding="12dp"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_edit_24"/>

    <TextView
        android:id="@+id/delete_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:drawablePadding="24dp"
        android:padding="12dp"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_delete_24"/>

</LinearLayout>