<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookmark_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="48dp"
            android:padding="12dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/copy_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="24dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/copy"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_content_copy_24"/>

        <TextView
            android:id="@+id/edit_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="24dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/edit"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_edit_24"/>

        <TextView
            android:id="@+id/delete_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="24dp"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/delete"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_delete_24"/>

    </LinearLayout>

</ScrollView>